# nb-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md  env.sh
adapters/cql/: Cargo.toml  README.md  build.rs  build.sh  cassandra-cpp-driver.Dockerfile  cassandra-jolokia.Dockerfile  nbrs-cassandra-cpp.Dockerfile  setup-test-fixtures.sh  up-cassandra-jolokia.sh
adapters/cql/.cargo/: config.toml
adapters/cql/src/: lib.rs
adapters/cql/workloads/: backup.yaml  cql_compaction_test.yaml  cql_keyvalue.yaml  full_cql_vector.yaml  full_cql_vector_backup.yaml  vector_describe.yaml
adapters/nb-adapter-http/: Cargo.toml  README.md
adapters/nb-adapter-model/: Cargo.toml
adapters/nb-adapter-plotter/: Cargo.toml
adapters/openapi/: Cargo.toml
adapters/plotter/: Cargo.toml
adapters/stdout/: Cargo.toml  README.md
adapters/testkit/: Cargo.toml  README.md
nb-activity/: Cargo.toml  README.md
nb-activity/src/: activity.rs  adapter.rs  bindings.rs  completions.rs  cycle.rs  describe.rs  executor.rs  fiber_pool.rs  lib.rs  linearize.rs  observer.rs  opseq.rs  profiler.rs  relevancy.rs  runner.rs  scene_tree.rs  scheduler.rs  scope.rs  scope_tree.rs  session.rs  synthesis.rs  validation.rs  wrappers.rs
nb-activity/tests/: pipeline_e2e.rs  recall_e2e.rs  stdout_e2e.rs
nb-errorhandler/: Cargo.toml  README.md
nb-errorhandler/src/: detail.rs  handler.rs  handlers.rs  lib.rs  router.rs
nb-metrics/: Cargo.toml  README.md
nb-metrics/benches/: cadence_layout.rs  instruments.rs
nb-metrics/src/: cadence_reporter.rs  component.rs  controls.rs  diag.rs  frame.rs  labels.rs  lib.rs  metrics_query.rs  scheduler.rs  selector.rs  snapshot.rs  store.rs
nb-metrics/tests/: api_surface.rs
nb-rate/: Cargo.toml  README.md
nb-rate/src/: applier.rs  lib.rs  limiter.rs  spec.rs
nb-rate/tests/: control_integration.rs  rate_tests.rs
nb-rs/: Cargo.toml  README.md
nb-rs/src/: bench.rs  cli.rs  daemon.rs  describe.rs  main.rs  plot.rs  run.rs  web_push.rs
nb-rs/stdlib/: distributions.gk  hashing.gk  identity.gk  latency.gk  modeling.gk  strings.gk
nb-rs/tests/: inline_workload.rs  workload_examples.rs
nb-tui/: Cargo.toml  README.md
nb-tui/src/: app.rs  lib.rs  reporter.rs  state.rs  widgets.rs
nb-tui/tests/: control_edit_test.rs  integration.rs  layout_test.rs
nb-variates/: Cargo.toml  README.md
nb-variates/benches/: gk_throughput.rs
nb-variates/examples/: assembler.rs  basic.rs  multi_thread.rs
nb-variates/src/: assembly.rs  compiled.rs  engine.rs  fusion.rs  hybrid.rs  jit.rs  kernel.rs  lib.rs  node.rs  runtime.rs  source.rs  viz.rs
nb-variates/stdlib/: modeling.gk  timeseries.gk  waves.gk
nb-variates/tests/: adversarial_gk.rs  bench_graphs.rs  end_to_end.rs  examples_test.rs  function_coverage.rs  fuzz_type_adapters.rs  gk_examples_test.rs  gk_files_test.rs  hybrid_test.rs  runtime_context_integration.rs  sampling_test.rs  scope_composition.rs  source_tests.rs  vectordata_concurrency.rs  vectordata_integration.rs
nb-web/: Cargo.toml  README.md
nb-web/src/: graph.rs  lib.rs  models.rs  routes.rs  server.rs  ws.rs
nb-web/static/: style.css
nb-web/templates/: base.html  dag.html  dashboard.html  functions.html  page_dag.html  page_dashboard.html  page_functions_header.html  stdlib.html
nb-web/tests/: controls_api.rs
nb-workload/: Cargo.toml  README.md
nb-workload/src/: bindpoints.rs  inline.rs  lib.rs  model.rs  parse.rs  spectest.rs  tags.rs  template.rs
nb-workload/tests/: spectest_validation.rs
nbrs/: Cargo.toml
nbrs-activity/: Cargo.toml  README.md
nbrs-activity/src/: activity.rs  adapter.rs  binder.rs  bindings.rs  completions.rs  describe.rs  executor.rs  fiber_pool.rs  fixture.rs  lib.rs  linearize.rs  log_sink.rs  observer.rs  opseq.rs  params.rs  profiler.rs  readout_context.rs  readouts.rs  relevancy.rs  report_anchor.rs  resource_pool.rs  runner.rs  scene_tree.rs  scheduler.rs  scope.rs  scope_flattening.rs  scope_tree.rs  session.rs  session_signals.rs  synthesis.rs  trace_router.rs  validation.rs  wires.rs  wrapper_registrations.rs  wrapper_registry.rs  wrapper_resolver.rs  wrappers.rs
nbrs-activity/tests/: checkpoint_resume_e2e.rs  checkpoint_resume_staircase.rs  fixture_strict.rs  pipeline_e2e.rs  recall_e2e.rs  srd71_scope_tree_probe.rs  stdout_e2e.rs
nbrs-metricsql/: Cargo.toml
nbrs-metricsql/scripts/: extract_fixtures.py
nbrs-metricsql/src/: ast.rs  catalog.rs  eval.rs  grammar.rs  lexer.rs  lib.rs  parser.rs  prettifier.rs  runtime.rs  streaming.rs
nbrs-metricsql/tests/: parity.rs
nbrs-tui/: Cargo.toml  README.md
nbrs-tui/src/: app.rs  display_sink.rs  frame_broker.rs  inspector_repl.rs  inspector_server.rs  key_watcher.rs  lib.rs  log_only_observer.rs  log_only_sink.rs  observer.rs  readout_panel.rs  readout_sink.rs  reporter.rs  run_state_actor.rs  sink_supervisor.rs  state.rs  tui_sink.rs  widgets.rs
nbrs-tui/tests/: control_edit_test.rs  inspector_test.rs  integration.rs  layout_test.rs
nbrs-workload/: Cargo.toml  README.md
nbrs-workload/src/: bindpoints.rs  gk_matter.rs  inline.rs  lib.rs  metric_format.rs  model.rs  parse.rs  report.rs  tags.rs
nbrs-workload/tests/: for_each_forms.rs  scenario_includes.rs  spectest_validation.rs
nbrs/src/: bench.rs  checkpoint_cmd.rs  cli.rs  completion.rs  daemon.rs  db_merge.rs  describe.rs  inspector.rs  main.rs  metrics_cache.rs  metrics_cmd.rs  metricsql_cmd.rs  openapi.rs  palette.rs  plot.rs  plot_metrics.rs  replay.rs  report.rs  report_build.rs  report_cmd.rs  report_scratch.rs  run.rs  summary.rs  web_push.rs
nbrs/stdlib/: hashing.gk  identity.gk  modeling.gk  strings.gk  timeseries.gk
nbrs/tests/: comprehension.rs  concurrent_scheduler.rs  cursor_partitions.rs  error_handlers.rs  inline_workload.rs  m3_dependent_for_each.rs  readout_lifecycle_events.rs  readout_pipeline.rs  report_cli_acceptance.rs  reports.rs  scope.rs  stdlib.rs  tui_terminal_toggle.rs  workload_examples.rs
personas/cassnbrs/: Cargo.toml  README.md  build.sh  cassnbrs.Dockerfile
personas/opennbrs/: Cargo.toml
tools/: Cargo.toml
tools/src/: query_label_analysis.rs
(+677 files in other folders)
