[workspace]
members = [
    "nb-rs",
    "nb-variates",
    "nb-metrics",
    "nb-workload",
    "nb-rate",
    "nb-errorhandler",
    "nb-activity",
    "nb-tui",
    "nb-web",
    "adapters/nb-adapter-stdout",
    "adapters/nb-adapter-model",
    "adapters/nb-adapter-http",
    "adapters/nb-adapter-plotter",
    "personas/opennbrs",
]
# cassnbrs and its interior adapter crate require the Apache
# Cassandra C++ driver. Build separately: cd personas/cassnbrs && bash build.sh
exclude = [
    "personas/cassnbrs",
    "personas/cassnbrs/adapter",
]
resolver = "3"
