[workspace]
members = [
    "nb-rs",
    "nb-variates",
    "nb-metrics",
    "nb-workload",
    "nb-rate",
    "nb-errorhandler",
    "nb-activity",
    "nb-tui",
    "nb-web",
    "adapters/nb-adapter-stdout",
    "adapters/nb-adapter-testkit",
    "adapters/nb-adapter-http",
    "adapters/nb-adapter-plotter",
    "personas/opennbrs",
]
# cassnbrs requires the Apache Cassandra C++ driver (-lcassandra).
# Build separately: cd personas/cassnbrs && cargo build --release
exclude = [
    "personas/cassnbrs",
    "personas/cassnbrs/adapter",
]
resolver = "3"
