[package]
name = "nb-activity"
version = "0.1.0"
edition = "2024"
description = "Activity execution engine for nb-rs"

[dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
nb-metrics = { path = "../nb-metrics" }
nb-rate = { path = "../nb-rate" }
nb-errorhandler = { path = "../nb-errorhandler" }
nb-workload = { path = "../nb-workload" }
nb-variates = { path = "../nb-variates" }
serde_json = "1"
