[package]
name = "nb-errorhandler"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Modular composable error handler for nb-rs"
keywords = ["nosqlbench", "workload", "benchmark", "data-generation"]
categories = ["command-line-utilities", "simulation"]
repository = "https://github.com/nosqlbench/nb-rs"
homepage = "https://github.com/nosqlbench/nb-rs"
readme = "README.md"

[dependencies]
regex = "1"
log = "0.4"
