[package]
name = "nb-metrics"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Metrics collection and reporting for nb-rs"
keywords = ["nosqlbench", "workload", "benchmark", "data-generation"]
categories = ["command-line-utilities", "simulation"]
repository = "https://github.com/nosqlbench/nb-rs"
homepage = "https://github.com/nosqlbench/nb-rs"
readme = "README.md"

[dependencies]
hdrhistogram = "7"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
regex = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = []
sqlite = ["dep:rusqlite", "dep:regex"]
victoriametrics = ["dep:reqwest"]
all-reporters = ["sqlite", "victoriametrics", "dep:base64"]
