[package]
name = "nb-rs"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Rust rewrite of nosqlbench: a pluggable workload generation and benchmarking engine"
keywords = ["nosqlbench", "workload", "benchmark", "data-generation"]
categories = ["command-line-utilities", "simulation"]
repository = "https://github.com/nosqlbench/nb-rs"
homepage = "https://github.com/nosqlbench/nb-rs"
readme = "README.md"

[[bin]]
name = "nbrs"
path = "src/main.rs"

[dependencies]
nb-variates = { path = "../nb-variates", version = "0.1.1" }
nb-metrics = { path = "../nb-metrics", version = "0.1.1" }
nb-workload = { path = "../nb-workload", version = "0.1.1" }
nb-rate = { path = "../nb-rate", version = "0.1.1" }
nb-errorhandler = { path = "../nb-errorhandler", version = "0.1.1" }
nb-activity = { path = "../nb-activity", version = "0.1.1" }
tokio = { version = "1", features = ["full"] }
glob = "0.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde_json = "1"
serde_yaml = "0.9"
nb-tui = { path = "../nb-tui", version = "0.1.1" }
nb-web = { path = "../nb-web", version = "0.1.1" }
nb-adapter-stdout = { path = "../adapters/nb-adapter-stdout", version = "0.1.1" }
nb-adapter-model = { path = "../adapters/nb-adapter-model", version = "0.1.1" }
nb-adapter-http = { path = "../adapters/nb-adapter-http", version = "0.1.1" }
nb-adapter-plotter = { path = "../adapters/nb-adapter-plotter", version = "0.1.1" }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
libc = "0.2"
veks-completion = { path = "../links/vectordata-rs/veks-completion" }
