[package]
name = "nb-tui"
version = "0.1.0"
edition = "2024"
description = "Terminal UI for nb-rs: live metrics dashboard, progress, op throughput"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
nb-metrics = { path = "../nb-metrics" }
nb-activity = { path = "../nb-activity" }
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
hdrhistogram = "7"
