[package]
name = "nb-variates"
version = "0.1.0"
edition = "2024"
description = "Generation kernel for deterministic variate generation in nb-rs"

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
data-encoding = "2"
regex = "1"
serde_json = "1"
vectordata = { version = "0.9", optional = true }

[features]
default = []
vectordata = ["dep:vectordata"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gk_throughput"
harness = false
