[package]
name = "nb-variates"
version = "0.1.0"
edition = "2024"
description = "Generation kernel for deterministic variate generation in nb-rs"

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
data-encoding = "2"
regex = "1"
serde_json = "1"
vectordata = { version = "0.9", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
target-lexicon = { version = "0.13", optional = true }

[features]
default = ["jit"]
vectordata = ["dep:vectordata"]
jit = ["dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-codegen", "dep:cranelift-frontend", "dep:target-lexicon"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gk_throughput"
harness = false
