[package]
name = "nb-variates"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Generation kernel for deterministic variate generation in nb-rs"
keywords = ["nosqlbench", "workload", "benchmark", "data-generation"]
categories = ["command-line-utilities", "simulation"]
repository = "https://github.com/nosqlbench/nb-rs"
homepage = "https://github.com/nosqlbench/nb-rs"
readme = "README.md"

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
data-encoding = "2"
regex = "1"
serde_json = "1"
petgraph = "0.8"
layout-rs = "0.1"
vectordata = { version = "0.21", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
target-lexicon = { version = "0.13", optional = true }
inventory = "0.3.24"

[features]
default = ["jit", "vectordata"]
vectordata = ["dep:vectordata"]
jit = ["dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-codegen", "dep:cranelift-frontend", "dep:target-lexicon"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "gk_throughput"
harness = false
