[package]
name = "nbrs-metricsql"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "MetricsQL parser/evaluator (Rust port). Compatibility-tested against VictoriaMetrics' upstream test suite."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Test fixtures harvested from upstream VM tests live in
# tests/fixtures/*.json — loaded by integration tests.
