[package]
name = "nbrs-metricsql"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "MetricsQL parser/evaluator (Rust port). Compatibility-tested against VictoriaMetrics' upstream test suite."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HDR histogram for the holistic-class streaming reducers
# (`quantile_over_time` and friends). Mergeable sketch with
# bounded relative error — see SRD-47 §"Holistic-function
# policy" for the design choice.
hdrhistogram = "7"
# Sqlite-backed `DataSource` adapter (SRD-47, follow-up).
# Optional so non-sqlite consumers don't pull rusqlite in.
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[features]
default = []
# Enables `nbrs_metricsql::adapters::sqlite::SqliteDataSource`
# — a `DataSource` impl over the nb-rs metrics.db schema
# (defined by nbrs-metrics). The schema contract is
# documented at the adapter module's rustdoc.
sqlite = ["dep:rusqlite"]

[dev-dependencies]
# Test fixtures harvested from upstream VM tests live in
# tests/fixtures/*.json — loaded by integration tests.
# rusqlite under the test scope so adapter tests can build
# fresh schemas + insert sample data inline.
rusqlite = { version = "0.31", features = ["bundled"] }
