[package]
name = "nbrs"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Rust rewrite of nosqlbench: a pluggable workload generation and benchmarking engine"
keywords = ["nosqlbench", "workload", "benchmark", "data-generation"]
categories = ["command-line-utilities", "simulation"]
repository = "https://github.com/nosqlbench/nb-rs"
homepage = "https://github.com/nosqlbench/nb-rs"
readme = "README.md"

[[bin]]
name = "nbrs"
path = "src/main.rs"

[[bin]]
name = "vectordata-audit"
path = "src/bin/vectordata_audit.rs"

[[bin]]
name = "recall-audit"
path = "src/bin/recall_audit.rs"

[[bin]]
name = "trace-recall"
path = "src/bin/trace_recall.rs"

[features]
# Default: pure-Rust scylla CQL engine. Builds anywhere; needs
# no C++ toolchain. Publishable to crates.io.
default = ["engine-scylla"]

# Pure-Rust ScyllaDB driver. Speaks the Apache Cassandra wire
# protocol — works against both Apache Cassandra and ScyllaDB.
engine-scylla = ["nbrs-adapter-cql/engine-scylla"]

# DataStax Cassandra C++ driver via FFI. Requires the system
# `libcassandra` plus libuv / openssl. Build locally against a
# sysroot prepared by `adapters/cql/build.sh driver`.
engine-cassandra-cpp = ["nbrs-adapter-cql/engine-cassandra-cpp", "dep:cassandra-cpp"]

# Convenience: enable both engines in one binary, with runtime
# selection via `cqldriver=scylla` / `cqldriver=cassandra-cpp`.
# When both are linked, cassandra-cpp wins by default (lower
# AliasResolverEntry rank); flip with `cqldriver=scylla`.
all-engines = ["engine-scylla", "engine-cassandra-cpp"]

# OpenAPI workload generation. Adds `describe-openapi` and
# `run-openapi` subcommands that synthesize ops from an
# OpenAPI 3.x spec and run them through the standard `http`
# adapter (or stdout for dry-run).
openapi = ["dep:nbrs-adapter-openapi", "dep:openapiv3"]

# Forward to nbrs-activity's flamegraph profiler.
flamegraph = ["nbrs-activity/flamegraph"]

[dependencies]
nbrs-variates = { path = "../nbrs-variates", version = "0.1.1" }
nbrs-metrics = { path = "../nbrs-metrics", version = "0.1.1" }
nbrs-metricsql = { path = "../nbrs-metricsql", version = "0.1.0", features = ["sqlite", "runtime"] }
nbrs-workload = { path = "../nbrs-workload", version = "0.1.1" }
nbrs-rate = { path = "../nbrs-rate", version = "0.1.1" }
nbrs-errorhandler = { path = "../nbrs-errorhandler", version = "0.1.1" }
nbrs-activity = { path = "../nbrs-activity", version = "0.1.1" }
# Used by the `vectordata-audit` bin to scrutinise dataset
# relationships through the catalog API (transport- and
# cache-layout-agnostic). The generic typed surface
# (`open_facet_typed`, `facet_manifest`, `open_facet_storage`)
# lets the tool read any facet by name + element type without
# baking in per-facet helpers.
vectordata = "1.1.1"
tokio = { version = "1", features = ["full"] }
# parking_lot::RwLock used by `RunState` shared with TuiObserver —
# the std RwLock is writer-preferring on Linux and deadlocks
# nested same-thread reads, which the TUI render path uses.
parking_lot = "0.12"
glob = "0.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
nbrs-tui = { path = "../nbrs-tui", version = "0.1.1" }
nbrs-web = { path = "../nbrs-web", version = "0.1.1" }
nbrs-adapter-stdout = { path = "../adapters/stdout", version = "0.1.1" }
nbrs-adapter-testkit = { path = "../adapters/testkit", version = "0.1.1" }
nbrs-adapter-http = { path = "../adapters/http", version = "0.1.1" }
nbrs-adapter-plotter = { path = "../adapters/plotter", version = "0.1.1" }
# CQL adapter — `default-features = false` so the engine choice
# flows through nbrs's own feature flags (engine-scylla /
# engine-cassandra-cpp / all-engines).
nbrs-adapter-cql = { path = "../adapters/cql", version = "0.1.1", default-features = false }
# Only needed for the TUI's `set_level(LogLevel::ERROR)` shim
# that suppresses C++ driver chatter while the TUI owns the
# screen. Gated behind the same feature that pulls the engine.
cassandra-cpp = { version = "3", optional = true }
# OpenAPI workload generation — opt-in via the `openapi`
# feature. Adapter crate carries the spec parser + workload
# synthesis; nbrs's `openapi` module wires the subcommands.
nbrs-adapter-openapi = { path = "../adapters/openapi", version = "0.1.1", optional = true }
openapiv3 = { version = "2", optional = true }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
libc = "0.2"
# Pure-Rust plotting library. Used by `nbrs plot` to render
# PNGs from the metrics db. Default features pull in fontconfig
# (system dep) for system-font rendering — disable and rely on
# the embedded ab_glyph backend so the build is hermetic.
plotters = { version = "0.3", default-features = false, features = [
    "bitmap_backend",
    "bitmap_encoder",
    "svg_backend",
    "ab_glyph",
    "line_series",
    "point_series",
    "chrono",
] }
# Used by `nbrs plot` for direct queries against the metrics db.
# `bundled` so we don't depend on system libsqlite3.
rusqlite = { version = "0.31", features = ["bundled"] }
# Stratified shell-completion engine. Drives the bash-completion
# script and the per-command tier filter. Tracks the published
# vectordata-rs 1.0.0 release.
veks-completion = "1"

[dev-dependencies]
# Headless terminal emulator for E2E tests of the
# `tui=terminal` ↔ `tui=on` toggle path. The toggle is
# interactive-only — Ctrl-T isn't observable from a piped
# stderr — so the integration test spawns `nbrs` inside a
# `SteppableTerminal`, sends Ctrl-T keystrokes, and reads
# back the rendered cells to assert which sink is active.
shadow-terminal = "0.2"
