[package]
name = "nb-tools"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
# Internal-only: collection of one-off analysis utilities used
# during development. No stable surface — not published.
publish = false

[workspace]

[[bin]]
name = "query-label-analysis"
path = "src/query_label_analysis.rs"

[dependencies]
vectordata = "1.0.2"
