[package]
name = "nbrs-adapter-cql"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "CQL adapter for nb-rs — multi-engine: pure-Rust scylla driver (default), DataStax Cassandra C++ driver (opt-in)"
keywords = ["nosqlbench", "cassandra", "cql", "scylla", "benchmark"]
categories = ["command-line-utilities", "database"]
repository = "https://github.com/nosqlbench/nb-rs"
homepage = "https://github.com/nosqlbench/nb-rs"
readme = "README.md"

[features]
# Default: pure-Rust scylla driver. No C++ toolchain. Speaks the
# Apache Cassandra wire protocol (works against both Cassandra
# and ScyllaDB).
default = ["engine-scylla"]

# Pure-Rust ScyllaDB driver. Registers `adapter=scylla` in
# inventory and contributes `AliasResolverEntry { alias: "cql",
# target: "scylla", default_rank: 200 }`.
engine-scylla = ["dep:scylla", "dep:uuid"]

# DataStax Cassandra C++ driver via FFI. Requires libcassandra +
# libuv + openssl on the host. Registers `adapter=cassandra-cpp`
# and `adapter=cassandra` in inventory; contributes the alias
# entry with `default_rank: 100` so it wins over scylla when
# both engines are linked.
engine-cassandra-cpp = ["dep:cassandra-cpp", "dep:cassandra-cpp-sys"]

# Convenience: enable both engines in one binary. Pick at
# runtime via `cqldriver=scylla` / `cqldriver=cassandra-cpp`,
# or bypass the alias with `adapter=scylla` /
# `adapter=cassandra-cpp`.
all-engines = ["engine-scylla", "engine-cassandra-cpp"]

[dependencies]
nbrs-activity = { path = "../../nbrs-activity", version = "0.1.1", default-features = false }
nbrs-metrics = { path = "../../nbrs-metrics", version = "0.1.1" }
nbrs-variates = { path = "../../nbrs-variates", version = "0.1.1" }
nbrs-workload = { path = "../../nbrs-workload", version = "0.1.1" }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt"] }
inventory = "0.3"
# `cql_timeuuid` GK node uses xxh3 to derive deterministic UUID
# bits from a u64 seed — see common/nodes.rs.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Per-execute RNG for sparse-tracing probability rolls. Using
# `rand::random::<f64>()` per call — thread-local PRNG, no
# contention across fibers, fine for "sample at this rate"
# semantics. Not cryptographic.
rand = "0.9"

# Engine-specific deps. Optional + feature-gated so the default
# build (scylla only) needs no C++ toolchain.
scylla = { version = "1.6", optional = true }
uuid = { version = "1", optional = true }
# Vendored — the upstream cassandra-cpp 3.0.2 wrapper does not
# expose a `cass_future_tracing_id` retrieval path
# (`Protected::build` and `Completable` lack the necessary
# public surface), and trace_id is required for any meaningful
# server-side trace capture. The fork at vendor/cassandra-cpp
# adds the small surface — see vendor/cassandra-cpp/CHANGES.local.md.
cassandra-cpp = { path = "../../vendor/cassandra-cpp", optional = true }
cassandra-cpp-sys = { version = "1.1", optional = true }
