[package]
name = "nb-adapter-model"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Model adapter for nb-rs: simulates operation execution with configurable results, latency, and error injection"
keywords = ["nosqlbench", "workload", "benchmark", "simulation"]
categories = ["command-line-utilities", "simulation"]
repository = "https://github.com/nosqlbench/nb-rs"
homepage = "https://github.com/nosqlbench/nb-rs"
readme = "README.md"

[dependencies]
nb-activity = { path = "../../nb-activity", version = "0.1.1" }
nb-adapter-stdout = { path = "../nb-adapter-stdout", version = "0.1.1" }
tokio = { version = "1", features = ["time"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
