[package]
name = "nbrs-adapter-openapi"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "OpenAPI workload-source adapter for nb-rs — synthesizes ops from OpenAPI 3.x specs"
keywords = ["nosqlbench", "openapi", "rest", "benchmark", "workload"]
categories = ["command-line-utilities", "web-programming::http-client"]
repository = "https://github.com/nosqlbench/nb-rs"
homepage = "https://github.com/nosqlbench/nb-rs"
readme = "README.md"

[dependencies]
nbrs-workload = { path = "../../nbrs-workload", version = "0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
openapiv3 = "2"
