[package]
name = "nbrs-adapter-stdout"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Stdout adapter for nb-rs: writes assembled ops to stdout or a file"
keywords = ["nosqlbench", "workload", "benchmark", "stdout"]
categories = ["command-line-utilities", "simulation"]
repository = "https://github.com/nosqlbench/nb-rs"
homepage = "https://github.com/nosqlbench/nb-rs"
readme = "README.md"

[dependencies]
nbrs-activity = { path = "../../nbrs-activity", version = "0.1.1" }
nbrs-workload = { path = "../../nbrs-workload", version = "0.1.1" }
inventory = "0.3.24"
# `ParsedOp.params` is `HashMap<String, serde_json::Value>`; the
# adapter needs the type to read its per-op-template `stdout:`
# channel param (SRD-40b §9). Workspace-wide pin would be ideal,
# but the workload crate already pulls serde_json transitively.
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
nbrs-variates = { path = "../../nbrs-variates", version = "0.1.1" }
