[package]
name = "cassnbrs"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Cassandra/CQL persona for nb-rs — native CQL workload testing"
keywords = ["nosqlbench", "cassandra", "cql", "benchmark"]
categories = ["command-line-utilities", "database"]
repository = "https://github.com/nosqlbench/nb-rs"
homepage = "https://github.com/nosqlbench/nb-rs"

[[bin]]
name = "cassnbrs"
path = "src/main.rs"

[dependencies]
# Interior CQL adapter crate
cassnbrs-adapter-cql = { path = "adapter", version = "0.1.1" }

# Core adapters (included in every persona)
nb-adapter-stdout = { path = "../../adapters/nb-adapter-stdout", version = "0.1.1" }
nb-adapter-model = { path = "../../adapters/nb-adapter-model", version = "0.1.1" }
nb-adapter-http = { path = "../../adapters/nb-adapter-http", version = "0.1.1" }

# Core framework
nb-activity = { path = "../../nb-activity", version = "0.1.1" }
nb-variates = { path = "../../nb-variates", version = "0.1.1" }
nb-metrics = { path = "../../nb-metrics", version = "0.1.1" }
nb-workload = { path = "../../nb-workload", version = "0.1.1" }
nb-rate = { path = "../../nb-rate", version = "0.1.1" }
nb-errorhandler = { path = "../../nb-errorhandler", version = "0.1.1" }
tokio = { version = "1", features = ["full"] }
