[package]
name = "cassnbrs"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Cassandra/CQL persona for nb-rs — native CQL workload testing"
keywords = ["nosqlbench", "cassandra", "cql", "benchmark"]
categories = ["command-line-utilities", "database"]
repository = "https://github.com/nosqlbench/nb-rs"
homepage = "https://github.com/nosqlbench/nb-rs"

[[bin]]
name = "cassnbrs"
path = "src/main.rs"

[dependencies]
# CQL adapter + GK nodes (registers itself via inventory at link time)
cassnbrs-adapter-cql = { path = "adapter", version = "0.1.1" }

# Standard adapters (register themselves via inventory at link time)
nb-adapter-stdout = { path = "../../adapters/nb-adapter-stdout", version = "0.1.1" }
nb-adapter-testkit = { path = "../../adapters/nb-adapter-testkit", version = "0.1.1" }
nb-adapter-http = { path = "../../adapters/nb-adapter-http", version = "0.1.1" }

# Shared runner (provides the full run pipeline)
nb-activity = { path = "../../nb-activity", version = "0.1.1", features = ["flamegraph"] }
tokio = { version = "1", features = ["full"] }
