[package]
name = "opennbrs"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "OpenAPI persona for nb-rs — API workload testing from OpenAPI specs"
keywords = ["nosqlbench", "openapi", "rest", "benchmark"]
categories = ["command-line-utilities", "web-programming::http-client"]
repository = "https://github.com/nosqlbench/nb-rs"
homepage = "https://github.com/nosqlbench/nb-rs"

[[bin]]
name = "opennbrs"
path = "src/main.rs"

[dependencies]
nb-activity = { path = "../../nb-activity", version = "0.1.1" }
nb-adapter-stdout = { path = "../../adapters/nb-adapter-stdout", version = "0.1.1" }
nb-adapter-testkit = { path = "../../adapters/nb-adapter-testkit", version = "0.1.1" }
nb-adapter-http = { path = "../../adapters/nb-adapter-http", version = "0.1.1" }
nb-variates = { path = "../../nb-variates", version = "0.1.1" }
nb-metrics = { path = "../../nb-metrics", version = "0.1.1" }
nb-workload = { path = "../../nb-workload", version = "0.1.1" }
nb-rate = { path = "../../nb-rate", version = "0.1.1" }
nb-errorhandler = { path = "../../nb-errorhandler", version = "0.1.1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
openapiv3 = "2"
